Update feature list

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -14,6 +14,9 @@
                                 <li>Unidirectional Path Tracing</li>
                                 <li>Stochastic Progressive Photon Mapping</li>
                                 <li>Light Tracing</li>
+                                <li>Low-overhead capture of light paths</li>
+                                <li>Interactive exploration of light paths</li>
+                                <li>Efficient binary light paths file format</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -23,7 +26,7 @@
                                 <li>Progressive rendering</li>
                                 <li>Interactive rendering</li>
                                 <li>Scene editing during rendering</li>
-                                <li>Spectral rendering (31 bands)</li>
+                                <li>Spectral rendering (31 bands in 400-700 nm)</li>
                                 <li>RGB rendering</li>
                             </ul>
                         </div>
@@ -39,13 +42,14 @@
                             </ul>
                         </div>
                         <div class="block">
-                            <h3>Volume Rendering</h3>
+                            <h3>Subsurface Scattering Profiles</h3>
                             <ul>
-                                <li>Single scattering</li>
-                                <li>Multiple scattering</li>
-                                <li>Homogeneous media</li>
-                                <li>Isotropic phase function</li>
-                                <li>Henyey-Greenstein phase function</li>
+                                <li>Gaussian</li>
+                                <li>Standard Dipole</li>
+                                <li>Better Dipole</li>
+                                <li>Directional Dipole</li>
+                                <li>Normalized Diffusion</li>
+                                <li>Random Walk</li>
                             </ul>
                         </div>
                     </div>
@@ -75,13 +79,13 @@
                             </ul>
                         </div>
                         <div class="block">
-                            <h3>Subsurface Scattering Profiles</h3>
+                            <h3>Volume Rendering</h3>
                             <ul>
-                                <li>Gaussian</li>
-                                <li>Standard Dipole</li>
-                                <li>Better Dipole</li>
-                                <li>Directional Dipole</li>
-                                <li>Normalized Diffusion</li>
+                                <li>Single scattering</li>
+                                <li>Multiple scattering</li>
+                                <li>Homogeneous media</li>
+                                <li>Isotropic phase function</li>
+                                <li>Henyey-Greenstein phase function</li>
                             </ul>
                         </div>
                     </div>
@@ -130,6 +134,7 @@
                                 <li>Transformation motion blur</li>
                                 <li>Deformation motion blur</li>
                                 <li>Arbitrarily number of motion steps</li>
+                                <li>Shutter opening/closing curves</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -137,7 +142,10 @@
                             <ul>
                                 <li>Open Shading Language support (OSL)</li>
                                 <li>OSL shader library</li>
+                                <li>OSL implementation of Maya shading nodes</li>
                                 <li>OpenColorIO support</li>
+                                <li>Built-in denoiser</li>
+                                <li>Command line tool for offline denoising</li>
                                 <li>Disney's SeExpr expressions</li>
                                 <li>AOVs</li>
                                 <li>Hierarchical instancing</li>
@@ -153,6 +161,7 @@
                                 <li>Nested dielectrics</li>
                                 <li>Automatic tracking of indices of refraction</li>
                                 <li>Packed, single-file scenes for easy transport</li>
+                                <li>Render stamps</li>
                                 <li>Search paths for external assets</li>
                                 <li>Dozens of diagnostic modes</li>
                             </ul>
@@ -175,7 +184,6 @@
                                 <li>Native Image Engine's Gaffer integration</li>
                                 <li>Native Autodesk® 3ds Max® 2015+ plugin</li>
                                 <li>Native Autodesk® Maya® 2017+ plugin</li>
-                                <li>Excellent coverage of Maya shading nodes</li>
                                 <li>Blender 2.79+ plugin</li>
                             </ul>
                         </div>
