Update feature list and download page

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -14,9 +14,6 @@
                                 <li>Unidirectional Path Tracing</li>
                                 <li>Stochastic Progressive Photon Mapping</li>
                                 <li>Light Tracing</li>
-                                <li>Low-overhead capture of light paths</li>
-                                <li>Interactive exploration of light paths</li>
-                                <li>Efficient binary light paths file format</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -88,6 +85,13 @@
                                 <li>Henyey-Greenstein phase function</li>
                             </ul>
                         </div>
+                        <div class="block">
+                            <h3>Non-Photorealistic Rendering</h3>
+                            <ul>
+                                <li>Toon shading (OSL shader)</li>
+                                <li>Ray traced contours (OSL shader)</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -104,6 +108,7 @@
                                 <li>Thin lens camera (depth of field)</li>
                                 <li>Polygonal diaphragm shapes</li>
                                 <li>Image-based diaphragm shapes</li>
+                                <li>Camera shift</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -123,6 +128,18 @@
                                 <li>Hosek &amp; Wilkie physically-based day sky</li>
                                 <li>Physically-based sun</li>
                                 <li>Environment transforms</li>
+                            </ul>
+                        </div>
+                        <div class="block">
+                            <h3>Visualization Tools</h3>
+                            <ul>
+                                <li>Low-overhead capture of light paths</li>
+                                <li>Interactive exploration of light paths</li>
+                                <li>Efficient binary light paths file format</li>
+                                <li>False colors mapping</li>
+                                <li>MATLAB's Jet color map</li>
+                                <li>Perceptually uniform color maps</li>
+                                <li>Relative luminance (Rec. 709) isolines</li>
                             </ul>
                         </div>
                     </div>
@@ -148,6 +165,7 @@
                                 <li>Command line tool for offline denoising</li>
                                 <li>Disney's SeExpr expressions</li>
                                 <li>AOVs</li>
+                                <li>Adaptive sampling</li>
                                 <li>Hierarchical instancing</li>
                                 <li>Per-instance visibility flags</li>
                                 <li>Alpha mapping</li>
@@ -157,6 +175,7 @@
                                 <li>Light Near Start</li>
                                 <li>Low Light Threshold</li>
                                 <li>Max Ray Intensity</li>
+                                <li>Roughness Clamping</li>
                                 <li>Bounce limits per scattering types</li>
                                 <li>Nested dielectrics</li>
                                 <li>Automatic tracking of indices of refraction</li>
@@ -180,11 +199,13 @@
                                 <li>Windows, Linux and macOS (64-bit)</li>
                                 <li>OBJ geometry files</li>
                                 <li>OpenEXR, TIFF, HDR, PNG, JPEG, PSD...</li>
-                                <li>Full Open Shading Language support</li>
+                                <li>Open Shading Language support</li>
+                                <li>OpenColorIO support</li>
                                 <li>Native Image Engine's Gaffer integration</li>
-                                <li>Native Autodesk® 3ds Max® 2015+ plugin</li>
+                                <li>Native Autodesk® 3ds Max® 2016+ plugin</li>
                                 <li>Native Autodesk® Maya® 2017+ plugin</li>
-                                <li>Blender 2.79+ plugin</li>
+                                <li>Blender 2.79 plugin</li>
+                                <li>Substance Painter-compatible OSL shader</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -196,7 +217,7 @@
                                 <li>Full extensibility via external C++ plugins</li>
                                 <li>Full featured Python 2.x/3.x API</li>
                                 <li>Embedded Python scripting</li>
-                                <li>More than 1400 built-in unit tests</li>
+                                <li>More than 1500 built-in unit tests</li>
                                 <li>Hundreds of built-in performance tests</li>
                                 <li>Rich, automatic functional test suite</li>
                             </ul>
@@ -212,6 +233,7 @@
                                 <li>Multiple Importance Sampling</li>
                                 <li>Efficient handling of alpha maps</li>
                                 <li>Advanced many-light sampling</li>
+                                <li>Experimental Intel® Embree backend</li>
                             </ul>
                         </div>
                         <div class="block">
@@ -219,6 +241,7 @@
                             <ul>
                                 <li>Full featured graphical tool for scene edition</li>
                                 <li>Command line renderer</li>
+                                <li>Command line denoiser</li>
                                 <li>Dropbox-based render farm tools</li>
                                 <li>OSL compiler and tools</li>
                             </ul>
@@ -226,9 +249,10 @@
                         <div class="block">
                             <h3>Infrastructure</h3>
                             <ul>
-                                <li>Git and GitHub for source control</li>
+                                <li>Git for source control</li>
+                                <li>GitHub for repository hosting, issues, wikis</li>
                                 <li>CMake build system</li>
-                                <li>Continuous Integration with Travis CI</li>
+                                <li>Continuous Integration (Travis CI, AppVeyor)</li>
                                 <li>Discord server</li>
                                 <li>Discourse forum</li>
                                 <li>appleseedhq.net mail addresses</li>
