--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -20,7 +20,7 @@
             <div class="buttons">
                 <div class="download">
                     {% for release in site.data.releases limit:1 %}
-                        <a class="button" id="download-link" href="#"><i class="fa fa-download"></i> Download</a>
+                        <a class="button" id="download-link" href="#"><i class="fas fa-download"></i> Download</a>
                         <a class="version" href="{{ release.github }}">Current Version: {{ release.version }}</a>
 
                         <script>
