--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -66,7 +66,7 @@
         <div class="content">
             {% for post in site.posts limit:5 %}
                 <article>
-                    <h2 id="latest-news">{{ post.title }}</h2>
+                    <h2 id="latest-news"><a href="{{ post.url }}">{{ post.title }}</a></h2>
                     <div class="date">{{ post.date | date: "%B %-d, %Y" }}</div>
                     {{ post.content }}
                 </article>
