Allow to link to the Team section of the About page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,7 +10,7 @@
     <div class="section dark team">
         <div class="content">
             <div class="group">
-                <h2>Core Team</h2>
+                <h2 id="team">Core Team</h2>
                 {% for member in site.data.coreteam %}
                     {% include member.html %}
                 {% endfor %}
