--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>The appleseed logo <img src="/img/appleseed-seeds-16-gray.png" style="vertical-align:-2px"> is designed by Paolo Berto (<a href="https://twitter.com/pberto">@pberto</a>)
+                    <p>The appleseed logo <img src="/img/appleseed-seeds-16-gray.png" style="vertical-align:-2px"> was designed by Paolo Berto (<a href="https://twitter.com/pberto">@pberto</a>)
                     <br>
                     Site and software released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a> - Assets released under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>
                     <br>
