--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,9 @@
         <meta name="description" content="appleseed is an open source, physically-based global illumination rendering engine primarily designed for animation and visual effects.">
         <meta name="google-site-verification" content="r1TFSRu5lmeTvLyLBW_2AP-quCnivVxpG4CtM10etgc">
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans%7CInconsolata">
-        <link rel="stylesheet" type="text/css" href="//use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="/css/font-open-sans.css">
+        <link rel="stylesheet" type="text/css" href="/css/font-inconsolata.css">
+        <link rel="stylesheet" type="text/css" href="/css/font-awesome-v5.5.0-all.css">
         <link rel="stylesheet" type="text/css" href="/css/styles.css">
         <link rel="stylesheet" type="text/css" href="/css/lightbox.css">
         <link rel="stylesheet" type="text/css" href="/css/photobox.css">
