Update Discord links in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,13 +34,13 @@
                     <div class="columns">
                         <ul class="column" id="contact">
                             <li class="header">Contact</li>
-                            <li><a href="https://discord.gg/Vcu5A7h">Discord</a></li>
+                            <li><a href="https://discord.gg/dNCE5J8">Discord</a></li>
                             <li><a href="https://forum.appleseedhq.net/">Forum</a></li>
                             <li>
                                 <a id="emailLink" href="#">Email</a>
                                 <div id="emailPopup">
                                     <div id="window">
-                                        <p>Our <a href="https://discord.gg/Vcu5A7h">Discord server</a> or the <a href="https://forum.appleseedhq.net/">user forum</a> are the best places for most questions and inquiries.</p>
+                                        <p>Our <a href="https://discord.gg/dNCE5J8">Discord server</a> or the <a href="https://forum.appleseedhq.net/">user forum</a> are the best places for most questions and inquiries.</p>
                                         <p>You can also contact us privately at <a href="mailto:hello@appleseedhq.net">hello@appleseedhq.net</a> but you may not get an answer as quickly as on Discord or via the forum.</p>
                                         <p><div style="text-align: center"><a id="closeEmailPopupLink" href="#">Close</a></div></p>
                                     </div>
