Add Pausable Rendering to features list

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -192,6 +192,7 @@
                                 <li>Render checkpointing (resumable renders)</li>
                                 <li>Search paths for external assets</li>
                                 <li>Dozens of diagnostic modes</li>
+                                <li>Pausable rendering</li>
                             </ul>
                         </div>
                     </div>
